feat: add user update PUT request with request id param
