# API/src/app.ts
@@ -3,7 +3,7 @@ import dotenv from "dotenv";
 import cors from "cors";
 import connectToMongo from "./config/mongo.js";
 import bodyParser from "body-parser";
-import { authRouter } from "routes";
+import { authRouter, userRouter } from "routes";
 import { swaggerMiddleware } from "middlewares";
 
 const app = express();
@@ -13,6 +13,7 @@ connectToMongo();
 
 app.use(bodyParser.json());
 app.use("/api", cors(), authRouter);
+app.use("/api", cors(), userRouter);
 app.use("/", ...swaggerMiddleware);
 
 app.listen(4000);
